--- a/templates/search.html
+++ b/templates/search.html
@@ -99,7 +99,7 @@
         <li><a href="">contact us</a></li>
         <li><a href="">tutors</a></li>
       </ul>
-      <a class="button rounded small" href="">sign up</a>
+      <a class="button blue rounded small" href="">sign up</a>
     </div>
   </div>
 </nav>
@@ -127,7 +127,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(static/assets/img/background/img-09.jpg)"></div>
+  <div class="background" style="background-image:url(static/assets/img/background/bg.jpg)"></div>
 </section>
 
 <!-- Popup Video -->
