--- a/templates/search.html
+++ b/templates/search.html
@@ -29,7 +29,7 @@
     <div class="right">
       <ul class="menu">
         <li><a href="">Contact</a></li>
-        <li><a href="">Tutors</a></li>
+        <li><a href="">Create Posting</a></li>
       </ul>
       <a class="button blue rounded small" href="">Sign Up</a>
     </div>
