--- a/templates/search.html
+++ b/templates/search.html
@@ -29,7 +29,7 @@
     <div class="right">
       <ul class="menu">
         <li><a href="">contact us</a></li>
-        <li><a href="">tutors</a></li>
+        <li><a href="/job-posting">Create posting</a></li>
       </ul>
       <a class="button blue rounded small" href="">sign up</a>
     </div>
