--- a/templates/results.html
+++ b/templates/results.html
@@ -45,14 +45,10 @@
           <div class="fix-3-12">
             <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
           </div>
-          <form class="slides-form" action="{{ url_for('results') }}">
-            <input type="name" class="rounded input-9 ae-4 fromCenter" name="name" placeholder="Name"/>
-            <input type="name" class="rounded input-9 ae-5 fromCenter" name="subject" placeholder="Subject"/></br>
-            <input type="name" class="rounded input-9 ae-7 fromCenter" name="location" placeholder="Location"/>
-            <input type="name" class="rounded input-9 ae-6 fromCenter" name="grade" placeholder="Grade"/></br></br>
-            <button type="submit" class="button blue rounded button-9 ae-8 fromCenter" name="button">Get Started</button>
-          </form></br>
-          <p class="large ae-3"><span class="opacity-8">Are you a tutor? Click <a href="#"><b>here</b></a></span></p>
+          {{name}}</br>
+          {{price}}</br>
+          {{phone}}</br>
+          {{description}}</br>
         </div>
       </div>
     </div>
