--- a/templates/search.html
+++ b/templates/search.html
@@ -31,7 +31,7 @@
         <li><a href="">Contact</a></li>
         <li><a href="">Tutors</a></li>
       </ul>
-      <a class="button blue rounded small" href="">Sign Up</a>
+      <a class="button blue rounded small" href="/signup">Sign Up</a>
     </div>
   </div>
 </nav>
