--- a/templates/signup.html
+++ b/templates/signup.html
@@ -31,7 +31,7 @@
         <li><a href="">Contact</a></li>
         <li><a href="">Tutors</a></li>
       </ul>
-      <a class="button blue rounded small" href="">Sign Up</a>
+      <a class="button blue rounded small" href="/signup">Sign Up</a>
     </div>
   </div>
 </nav>
@@ -45,12 +45,15 @@
             <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
           </div>
           <form class="slides-form" action="{{ url_for('results') }}">
-            <input type="name" class="rounded input-9 ae-4 fromCenter" name="name" placeholder="Name"/></br>
-            <input type="name" class="rounded input-9 ae-5 fromCenter" name="subject" placeholder="Subject"/></br>
-            <input type="name" class="rounded input-9 ae-6 fromCenter" name="grade" placeholder="Grade"/></br></br>
-            <button type="submit" class="button blue rounded button-9 ae-7 fromCenter" name="button">Get Started</button>
+            <a href="/signup_tutor">
+                <button type="button" class="button blue rounded button-9 ae-7 fromCenter" name="button">I'm a Tutor</button>
+            </a>
+            <a href="/signup_student">
+                <button type="button" class="button blue rounded button-9 ae-7 fromCenter" name="button">I'm a Student</button>
+            </a>
+            
           </form></br>
-          <p class="large ae-3"><span class="opacity-8">Are you a tutor? Click <a href="#"><b>here</b></a></span></p>
+          <p class="large ae-3"><span class="opacity-8">Want to login? Click <a href="#"><b>here</b></a></span></p>
         </div>
 
       </div>
