--- a/templates/search.html
+++ b/templates/search.html
@@ -29,7 +29,7 @@
     <div class="right">
       <ul class="menu">
 
-        <li><a href="">contact us</a></li>
+        
         <li><a href="/job-posting">Create posting</a></li>
       </ul>
       <a class="button blue rounded small" href="">Sign Up</a>
@@ -65,9 +65,9 @@
     <div class="left"></div>
     <div class="center">
       <ul class="menu uppercase">'
-        <li><a href="">About</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">Tutors</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <li><a href="/ourtutors">Our Tutors</a></li>
       </ul>
     </div>
     <div class="right"><span data-dropdown-id="2" class="button actionButton dropdownTrigger"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#share"></use></svg></span></div>
