--- a/templates/signup_student.html
+++ b/templates/signup_student.html
@@ -46,7 +46,7 @@
           </div>
           <form class="slides-form" action="{{ url_for('results') }}">
             <input type="name" class="rounded input-9 ae-4 fromCenter" name="name" placeholder="Name"/></br>
-            <input type="name" class="rounded input-9 ae-5 fromCenter" name="subject" placeholder="Subject"/></br>
+            <input type="name" class="rounded input-9 ae-5 fromCenter" name="phone" placeholder="Phone Number"/></br>
             <input type="name" class="rounded input-9 ae-6 fromCenter" name="grade" placeholder="Grade"/></br></br>
             <button type="submit" class="button blue rounded button-9 ae-7 fromCenter" name="button">Get Started</button>
           </form></br>
