--- a/templates/signup_tutor.html
+++ b/templates/signup_tutor.html
@@ -44,7 +44,7 @@
           <div class="fix-3-12">
             <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
           </div>
-          <form class="slides-form" action="/register_tutor}">
+          <form class="slides-form" action="/register_tutor">
             <input type="name" class="rounded input-9 ae-4 fromCenter" name="name" placeholder="Name"/></br>
             <input type="name" class="rounded input-9 ae-5 fromCenter" name="price" placeholder="Hourly Rate"/></br>
             <input type="name" class="rounded input-9 ae-6 fromCenter" name="phone" placeholder="Phone Number"/></br></br>
