--- a/templates/job_post.html
+++ b/templates/job_post.html
@@ -28,7 +28,8 @@
     <div class="left rounded small"><a href="{{ url_for('search') }}"><img src="static/assets/img/logo.png" height="50"></a></div>
     <div class="right">
       <ul class="menu">
-        <li><a href="/job-posting">Create posting</a></li>
+        <li><a href="/contact">Contact Us</a></li>
+        <li><a href="/job-posting">Create Posting</a></li>
       </ul>
       <a class="button blue rounded small" href="">sign up</a>
     </div>
@@ -38,7 +39,7 @@
 <section class="slide fade-6 kenBurns">
     <div class="content">
       <div class="container">
-      
+
         <div class="wrap">
           <div class="fix-12-12">
             <div class="jumbotron">
@@ -47,17 +48,17 @@
                 </h1> <br/>
               </div>
             <form class="slides-form" action="{{ url_for('results') }}">
-                
+
               <input type="name" class="rounded input-9 ae-5 fromCenter" name="input-subject" placeholder="Which Subject?"/>
               <input type="name" class="rounded input-9 ae-6 fromCenter" name="input-grade" placeholder="Which Grade Level?"/></br>
-              
+
               <input type="name" class="rounded input-9 ae-6 fromCenter" name="user-price" placeholder="Rate (Per Hour)?"/>
               <input type="name" class="rounded input-9 ae-6 fromCenter" name="user-description" placeholder="Description (Meeting location, etc)"/></br><br/>
               <button type="submit" class="button blue rounded button-9 ae-7 fromCenter" name="button">Post!</button>
             </form>
-            
+
           </div>
-  
+
         </div>
       </div>
     </div>
