--- a/templates/contact.html
+++ b/templates/contact.html
@@ -42,7 +42,8 @@
         </div>
         <div class="right">
           <ul class="menu">
-            <li><a href="/job-posting">Create posting</a></li>
+            <li><a href="/contact">Contact Us</a></li>
+            <li><a href="/job-posting">Create Posting</a></li>
           </ul>
           <a class="button blue rounded small" href="">sign up</a>
         </div>
