--- a/templates/search.html
+++ b/templates/search.html
@@ -28,7 +28,7 @@
     <div class="left rounded small"><a href="{{ url_for('search') }}"><img src="static/assets/img/logo.png" height="50"></a></div>
     <div class="right">
       <ul class="menu">
-
+        <li><a href="/contact">Contact Us</a></li>
         <li><a href="/job-posting">Create posting</a></li>
       </ul>
       <a class="button blue rounded small" href="/signup">Sign Up</a>
