--- a/templates/search.html
+++ b/templates/search.html
@@ -42,7 +42,9 @@
       <div class="wrap">
         <div class="fix-12-12">
           <div class="fix-3-12">
-            <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
+            <a href="#">
+              <img src="static/assets/img/logo.png">
+            </a></br></br>
           </div>
           <form class="slides-form" action="{{ url_for('results') }}">
             <input type="name" class="rounded input-9 ae-4 fromCenter" name="name" placeholder="Name"/>
