--- a/templates/search.html
+++ b/templates/search.html
@@ -42,7 +42,7 @@
       <div class="wrap">
         <div class="fix-12-12">
           <div class="fix-3-12">
-            <a href="#">
+            <a class="ae-3 rounded" href="#">
               <img src="static/assets/img/logo.png">
             </a></br></br>
           </div>
