--- a/templates/results.html
+++ b/templates/results.html
@@ -46,6 +46,9 @@
             <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
           </div>
           {{name}}
+          {{price}}
+          {{description}}
+          {{phone}}
         </div>
       </div>
     </div>
