--- a/templates/signup.html
+++ b/templates/signup.html
@@ -53,7 +53,7 @@
             </a>
             
           </form></br>
-          <p class="large ae-3"><span class="opacity-8">Want to login? Click <a href="#"><b>here</b></a></span></p>
+          <p class="large ae-3"><span class="opacity-8">Want to login? Click <a href="/login"><b>here</b></a></span></p>
         </div>
 
       </div>
