--- a/templates/login_student.html
+++ b/templates/login_student.html
@@ -44,17 +44,13 @@
           <div class="fix-3-12">
             <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
           </div>
-          <p class="large ae-3"><span class="opacity-8">Login</span></p>
-          <form class="slides-form" action="{{ url_for('results') }}">
-            <a href="/login_tutor">
-                <button type="button" class="button blue rounded button-9 ae-7 fromCenter" name="button">Login as Tutor</button>
-            </a>
-            <a href="/login_student">
-                <button type="button" class="button blue rounded button-9 ae-7 fromCenter" name="button">Login as Student</button>
-            </a>
-            
+          <h1 class="large ae-3"><span class="opacity-8">Login as Student</span></h1>
+          <form class="slides-form" action="/student_landing">
+            <input type="name" class="rounded input-9 ae-4 fromCenter" name="name" placeholder="Name"/></br>
+            <input type="name" class="rounded input-9 ae-5 fromCenter" name="password" placeholder="Password"/></br>
+            <input type="submit" class="button blue rounded button-9 ae-7 fromCenter" name="button">
           </form></br>
-          <p style= class="large ae-9"><span class="opacity-8">Want to signup? Click <a href="/signup"><b>here</b></a></span></p>
+          <p class="large ae-3"><span class="opacity-8">Are you a student? Click <a href="/signup_student"><b>here</b></a></span></p>
         </div>
 
       </div>
