--- a/templates/student_landing.html
+++ b/templates/student_landing.html
@@ -42,21 +42,20 @@
       <div class="wrap">
         <div class="fix-12-12">
           <div class="fix-3-12">
-            <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
+            <a class="ae-3 rounded" href="#">
+              <img src="static/assets/img/logo.png">
+            </a></br></br>
           </div>
-          <p class="large ae-3"><span class="opacity-8">Login</span></p>
+          <h1 class="large ae-3"><span class="opacity-8">Welcome {{Name}}</span></h1>
           <form class="slides-form" action="{{ url_for('results') }}">
-            <a href="/login_tutor">
-                <button type="button" class="button blue rounded button-9 ae-7 fromCenter" name="button">Login as Tutor</button>
-            </a>
-            <a href="/login_student">
-                <button type="button" class="button blue rounded button-9 ae-7 fromCenter" name="button">Login as Student</button>
-            </a>
-            
+            <input type="name" class="rounded input-9 ae-4 fromCenter" name="name" placeholder="Name"/>
+            <input type="name" class="rounded input-9 ae-5 fromCenter" name="subject" placeholder="Subject"/></br>
+            <input type="name" class="rounded input-9 ae-7 fromCenter" name="location" placeholder="Location"/>
+            <input type="name" class="rounded input-9 ae-6 fromCenter" name="grade" placeholder="Grade"/></br></br>
+            <button type="submit" class="button blue rounded button-9 ae-8 fromCenter" name="button">Get Started</button>
           </form></br>
-          <p style= class="large ae-9"><span class="opacity-8">Want to signup? Click <a href="/signup"><b>here</b></a></span></p>
+          <p class="large ae-3"><span class="opacity-8">Are you a tutor? Click <a href="#"><b>here</b></a></span></p>
         </div>
-
       </div>
     </div>
   </div>
@@ -68,9 +67,9 @@
     <div class="left"></div>
     <div class="center">
       <ul class="menu uppercase">'
-        <li><a href="">About</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">Tutors</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <li><a href="/ourtutors">Our Tutors</a></li>
       </ul>
     </div>
     <div class="right"><span data-dropdown-id="2" class="button actionButton dropdownTrigger"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#share"></use></svg></span></div>
