--- a/templates/tutor_landing.html
+++ b/templates/tutor_landing.html
@@ -47,9 +47,9 @@
             </a></br></br>
           </div>
           <h1 class="large ae-3"><span class="opacity-8">Welcome {{Name}}</span></h1>
-          <h2 class="large ae-3"><span class="opacity-8">Get Started By:</span></h2>
+          <h3 class="large ae-3"><span class="opacity-8">Get Started By:</span></h3>
           <a href="/job_post">
-            <button type="button" class="button blue rounded button-9 ae-7 fromCenter" name="button">Creating a Posting</button>
+            <button type="button" class="button blue rounded button-9 ae-7 fromCenter" name="button">Creating a Post</button>
         </a>
         </div>
       </div>
