--- a/templates/ourTutors.html
+++ b/templates/ourTutors.html
@@ -95,6 +95,23 @@
       ></div>
     </section>
 
+    <nav class="panel bottom forceMobileView">
+      <div class="sections desktop">
+        <div class="left"></div>
+        <div class="center">
+          <ul class="menu uppercase">'
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
+            <li><a href="/ourtutors">Tutors</a></li>
+          </ul>
+        </div>
+        <div class="right"><span data-dropdown-id="2" class="button actionButton dropdownTrigger"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#share"></use></svg></span></div>
+      </div>
+      <div class="sections compact hidden">
+        <div class="right"><span data-dropdown-id="2" class="button actionButton dropdownTrigger"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#share"></use></svg></span></div>
+      </div>
+    </nav>
+
     <!-- jQuery 3.5.1 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
