--- a/templates/search.html
+++ b/templates/search.html
@@ -68,7 +68,7 @@
       <ul class="menu uppercase">'
         <li><a href="/about">About</a></li>
         <li><a href="/contact">Contact</a></li>
-        <li><a href="/ourtutors">Our Tutors</a></li>
+        <li><a href="/ourtutors">Tutors</a></li>
       </ul>
     </div>
     <div class="right"><span data-dropdown-id="2" class="button actionButton dropdownTrigger"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#share"></use></svg></span></div>
