--- a/templates/login.html
+++ b/templates/login.html
@@ -44,7 +44,7 @@
           <div class="fix-3-12">
             <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
           </div>
-          <p class="large ae-3"><span class="opacity-8">Login</span></p>
+          <h1 class="large ae-3"><span class="opacity-8">Login</span></h1><br>
           <form class="slides-form" action="{{ url_for('results') }}">
             <a href="/login_tutor">
                 <button type="button" class="button blue rounded button-9 ae-7 fromCenter" name="button">Login as Tutor</button>
@@ -54,7 +54,7 @@
             </a>
             
           </form></br>
-          <p style= class="large ae-9"><span class="opacity-8">Want to signup? Click <a href="/signup"><b>here</b></a></span></p>
+          <p class="large ae-3"><span class="opacity-8">Want to signup? Click <a href="/signup"><b>here</b></a></span></p>
         </div>
 
       </div>
