--- a/templates/signup_student.html
+++ b/templates/signup_student.html
@@ -45,7 +45,7 @@
             <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
           </div>
           <h1 class="large ae-3"><span class="opacity-8">Signup</span></h1><br>
-          <form class="slides-form" action="{{ url_for('results') }}">
+          <form class="slides-form" action="/student_landing">
             <input type="name" class="rounded input-9 ae-4 fromCenter" name="name" placeholder="Name"/></br>
             <input type="name" class="rounded input-9 ae-5 fromCenter" name="phone" placeholder="Phone Number"/></br>
             <input type="name" class="rounded input-9 ae-6 fromCenter" name="grade" placeholder="Grade"/></br></br>
