--- a/templates/search.html
+++ b/templates/search.html
@@ -53,7 +53,7 @@
             <input type="name" class="rounded input-9 ae-6 fromCenter" name="grade" placeholder="Grade"/></br></br>
             <button type="submit" class="button blue rounded button-9 ae-8 fromCenter" name="button">Get Started</button>
           </form></br>
-          <p class="large ae-3"><span class="opacity-8">Are you a tutor? Click <a href="#"><b>here</b></a></span></p>
+          <p class="large ae-3"><span class="opacity-8">Are you a tutor? Click <a href="/login_tutor"><b>here</b></a></span></p>
         </div>
       </div>
     </div>
