--- a/templates/login_student.html
+++ b/templates/login_student.html
@@ -44,7 +44,7 @@
           <div class="fix-3-12">
             <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
           </div>
-          <h1 class="large ae-3"><span class="opacity-8">Login as Student</span></h1><br>
+          <h1 class="large ae-3"><span class="opacity-8">Login as Student</span></h1><br></br>
           <form class="slides-form" action="/student_landing">
             <input type="name" class="rounded input-9 ae-4 fromCenter" name="name" placeholder="Name"/></br>
             <input type="name" class="rounded input-9 ae-5 fromCenter" name="password" placeholder="Password"/></br>
