--- a/templates/login_student.html
+++ b/templates/login_student.html
@@ -47,7 +47,7 @@
           <h1 class="large ae-3"><span class="opacity-8">Login as Student</span></h1><br></br>
           <form class="slides-form" action="/student_landing">
             <input type="name" class="rounded input-9 ae-4 fromCenter" name="name" placeholder="Name"/></br>
-            <input type="name" class="rounded input-9 ae-5 fromCenter" name="password" placeholder="Password"/></br>
+            <input type="password" class="rounded input-9 ae-5 fromCenter" name="password" placeholder="Password"/></br>
             <input type="submit" class="button blue rounded button-9 ae-7 fromCenter" name="button">
           </form></br>
           <p class="large ae-3"><span class="opacity-8">Are you a student? Click <a href="/signup_student"><b>here</b></a></span></p>
