--- a/templates/signup_student.html
+++ b/templates/signup_student.html
@@ -49,6 +49,7 @@
             <input type="name" class="rounded input-9 ae-4 fromCenter" name="name" placeholder="Name"/></br>
             <input type="name" class="rounded input-9 ae-5 fromCenter" name="phone" placeholder="Phone Number"/></br>
             <input type="name" class="rounded input-9 ae-6 fromCenter" name="grade" placeholder="Grade"/></br></br>
+            <input type="password" class="rounded input-9 ae-6 fromCenter" name="password" placeholder="Password"/></br></br>
             <button type="submit" class="button blue rounded button-9 ae-7 fromCenter" name="button">Get Started</button>
           </form></br>
           <p class="large ae-3"><span class="opacity-8">Are you a tutor? Click <a href="/signup_tutor"><b>here</b></a></span></p>
