--- a/templates/signup_tutor.html
+++ b/templates/signup_tutor.html
@@ -50,6 +50,7 @@
             <input type="name" class="rounded input-9 ae-5 fromCenter" name="price" placeholder="Hourly Rate"/></br>
             <input type="name" class="rounded input-9 ae-6 fromCenter" name="phone" placeholder="Phone Number"/></br></br>
             <textarea type="text" class="rounded input-9 ae-6 fromCenter" name="description" placeholder="Description of Your Service"/></textarea></br></br>
+            <input type="password" class="rounded input-9 ae-6 fromCenter" name="password" placeholder="Password"/></br></br>
             <input type="submit" class="button blue rounded button-9 ae-7 fromCenter" name="button">
           </form></br>
           <p class="large ae-3"><span class="opacity-8">Are you a student? Click <a href="/signup_student"><b>here</b></a></span></p>
