--- a/templates/tutor_landing.html
+++ b/templates/tutor_landing.html
@@ -48,7 +48,7 @@
           </div>
           <h1 class="large ae-3"><span class="opacity-8">Welcome {{Name}}</span></h1>
           <h3 class="large ae-3"><span class="opacity-8">Get Started By:</span></h3>
-          <a href="/job_post">
+          <a href="/job-posting">
             <button type="button" class="button blue rounded button-9 ae-7 fromCenter" name="button">Creating a Post</button>
         </a>
         </div>
