--- a/templates/results.html
+++ b/templates/results.html
@@ -45,10 +45,13 @@
           <div class="fix-3-12">
             <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
           </div>
-          {{name}}
-          {{price}}
-          {{description}}
-          {{phone}}
+          <h1 class="large ae-3"><span class="opacity-8">Results that Match Your Criteria</span></h1><br></br>
+          <h4>Name: <span style="color: #b85ce6;">{{name}}</span></h4>
+          <h4>Price: <span style="color: #b85ce6;">${{price}}</span></h4>
+          <h4>Description: <span style="color: #b85ce6;">{{description}}</span></h4>
+          <h4>Phone Number: <span style="color: #b85ce6;">{{phone}}</span></h4>
+          
+          
         </div>
       </div>
     </div>
