--- a/templates/job_post.html
+++ b/templates/job_post.html
@@ -55,7 +55,9 @@
               <input type="name" class="rounded input-9 ae-6 fromCenter" name="input-grade" placeholder="Which Grade Level?"/></br>
 
               <input type="name" class="rounded input-9 ae-6 fromCenter" name="user-price" placeholder="Rate (Per Hour)?"/>
-              <input type="name" class="rounded input-9 ae-6 fromCenter" name="user-description" placeholder="Description (Meeting location, etc)"/></br><br/>
+              <input type="name" class="rounded input-9 ae-6 fromCenter" name="user-description" placeholder="Description (Meeting location, etc)"/></br>
+
+              <input type="name" class="rounded input-9 ae-6 fromCenter" name="phone-number" placeholder="Phone Number?"/></br><br/>
               <button type="submit" class="button blue rounded button-9 ae-7 fromCenter" name="button">Post!</button>
             </form>
 
