--- a/templates/about.html
+++ b/templates/about.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
       type="text/css"
     />
-
+    <link rel="icon" type="image/png" href="static/assets/img/logo.png">
     <!-- Fonts and Material Icons -->
     <link
       rel="stylesheet"
