--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,6 +19,9 @@
       type="text/css"
     />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="static/assets/img/logo.png">
+    
     <!-- Fonts and Material Icons -->
     <link
       rel="stylesheet"
