--- a/templates/login.html
+++ b/templates/login.html
@@ -19,6 +19,9 @@
         .slides { font-family: 'Inter', sans-serif; }
     </style>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="static/assets/img/logo.png">
+
 </head>
 <body class="slides animated noPreload">
 
@@ -52,7 +55,7 @@
             <a href="/login_student">
                 <button type="button" class="button blue rounded button-9 ae-7 fromCenter" name="button">Login as Student</button>
             </a>
-            
+
           </form></br>
           <p class="large ae-3"><span class="opacity-8">Want to signup? Click <a href="/signup"><b>here</b></a></span></p>
         </div>
