--- a/templates/ourTutors.html
+++ b/templates/ourTutors.html
@@ -30,6 +30,10 @@
         font-family: "Inter", sans-serif;
       }
     </style>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="static/assets/img/logo.png">
+    
   </head>
   <body class="slides animated noPreload">
     <!-- Panel Top #01 -->
