--- a/templates/results.html
+++ b/templates/results.html
@@ -19,6 +19,9 @@
         .slides { font-family: 'Inter', sans-serif; }
     </style>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="static/assets/img/logo.png">
+
 </head>
 <body class="slides animated noPreload">
 
@@ -50,8 +53,8 @@
           <h4>Price: <span style="color: #b85ce6;">${{price}}</span></h4>
           <h4>Description: <span style="color: #b85ce6;">{{description}}</span></h4>
           <h4>Phone Number: <span style="color: #b85ce6;">{{phone}}</span></h4>
-          
-          
+
+
         </div>
       </div>
     </div>
