--- a/templates/login_tutor.html
+++ b/templates/login_tutor.html
@@ -19,6 +19,9 @@
         .slides { font-family: 'Inter', sans-serif; }
     </style>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="static/assets/img/logo.png">
+
 </head>
 <body class="slides animated noPreload">
 
