--- a/templates/about.html
+++ b/templates/about.html
@@ -18,7 +18,10 @@
       rel="stylesheet"
       type="text/css"
     />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="static/assets/img/logo.png">
+
     <!-- Fonts and Material Icons -->
     <link
       rel="stylesheet"
